added a hisrti function add done

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="hed">
       <div class="navbar bg-base-500 px-6 sticky-header container mx-auto">
         <div class="navbar-start">
-          <a class="btn  color1">Blog</a>
+          <a id="blog" class="btn  color1">Blog</a>
         </div>
         <div class="navbar-center flex">
           <div>
@@ -96,7 +96,7 @@
             makes difference. Please join us in supporting the relief efforts and making a positive impact on the lives
             of those in need.</p>
           <div class="card-actions  ">
-            <input id="n-input-donation" class="w-full py-3 border-2 px-2"
+            <input id="n-input-donation" class="w-full py-3 border-2 px-2 rounded-2xl"
               placeholder="                     Write Your Donation Amount" type="text">
             <button id="noakali-donate-btn" onclick="my_modal_5.showModal()" class=" btn  color1 w-full">Donate</button>
           </div>
@@ -125,13 +125,12 @@
             aftermath of this disaster. Every contribution counts towards making a real difference. Please consider
             donating today to assist those in urgent need.</p>
           <div class="card-actions  ">
-            <input id="f-input-donation" class="w-full py-3 border-2 px-2"
+            <input id="f-input-donation" class="w-full py-3 border-2 px-2 rounded-2xl"
               placeholder="                     Write Your Donation Amount" type="text">
             <button id="fani-donate-btn" onclick="my_modal_5.showModal()" class=" btn  color1 w-full ">Donate</button>
           </div>
         </div>
       </div>
-
 
       <!-- quota section -->
 
@@ -155,7 +154,7 @@
             their recovery. Please consider making a donation to support these brave individuals in their time of need.
           </p>
           <div class="card-actions  ">
-            <input id="q-input-donation" class="w-full py-3 border border-2 px-2"
+            <input id="q-input-donation" class="w-full py-3 border-2 px-2 rounded-2xl"
               placeholder="                     Write Your Donation Amount" type="text">
             <button id="qouta-donate-btn" onclick="my_modal_5.showModal()" class=" btn  color1 w-full">Donate</button>
           </div>
@@ -167,24 +166,7 @@
     <!-- history section -->
 
     <section id="history" class="lg:w-8/12 mx-auto hidden ">
-
-      <div class="border-2 mb-4 rounded-lg px-8  py-6 ">
-        <h1 id="nowakali-history-tk" class="text-2xl"> Taka is Donated for famine-2024 at noakali, Bangladesh</h1>
-        <h5 id="nowakali-history-date">date</h5>
-      </div>
-
-      <div class="border-2 mb-4 rounded-lg  px-8 py-6">
-        <h1 id="fani-history-tk" class="text-2xl"> Taka is Donated for famine-2024 at Feni, Bangladesh</h1>
-        <h5 id="fani-history-date">date</h5>
-      </div>
-
-
-
-      <div class="border-2 mb-4 rounded-lg px-8 py-6">
-        <h1 id="quota-history-tk" class="text-2xl"> Taka is Donated for famine-2024 at qouta, Bangladesh</h1>
-        <h5 id="quota-history-date">date</h5>
-      </div>
-
+      
     </section>
 
     <!--modal section           -->
