--- a/blog.html
+++ b/blog.html
@@ -13,33 +13,44 @@
 body{
 font-family: "Lexend", system-ui;
 }
+.hed {
+      background-color: rgb(249, 247, 243);
+    }
+.color1 {
+      background-color: rgb(180, 244, 97);
+      font-size: 1.1rem;
+    }
 </style>
 
 </head>
 <body>
 <header>
 <!-- Navbar section start -->
-<div class="bg-[#F9F7F3]  shadow-lg z-50 h-20">
-<div class="md:container mx-auto">
-<nav class="flex justify-around items-center h-full">
-<div class="">
-<button id="homes" class="btn bg-[#B4F461] py-3 px-7 rounded-xl">Home</button>
 
-</div>
-<div class="flex font-semibold items-center">
-<img src="./assets/logo.png" alt="">
-<h1 class="ml-2 font-bold text-2xl hidden md:flex">Donate Bangladesh</h1>
-</div>
-<div class="flex">
-<img src="./assets/coin.png" alt="">
-<h1 class="ml-2 font-bold text-2xl">5500</h1>
-<h1 class="ml-2 font-bold text-2xl">BDT</h1>
-</div>
-</nav>
+<div class="hed">
+    <div class="navbar bg-base-500 px-6 sticky-header container mx-auto">
+      <div class="navbar-start">
+        <a id="homes" class="btn  color1">Home</a>
+      </div>
+      <div class="navbar-center flex">
+        <div>
+          <img src="assets/logo.png" alt="">
+        </div>
+        <div>
+          <h1>Donate Bangladesh</h1>
+        </div>
+      </div>
 
-</div>
+      <h1></h1>
+      <div class="navbar-end flex">
+        <div> <img src="assets/coin.png" alt=""></div>
 
-</div>
+        <div>
+          <h1 class=" text-xl"><span id="total-balance">5500</span>BDT</h1>
+        </div>
+      </div>
+    </div>
+  </div>
 <!-- Navbar section end -->
 
 
@@ -48,7 +59,7 @@ font-family: "Lexend", system-ui;
 <div class="flex my-12">
 <!-- <h1 class="flex text-4xl font-bold mt-2">Important FAQ <img class=" m-0 my-1 h-16 w-20 " src="./assets/chat.png" alt=""></h1> -->
 <h1 class="flex text-5xl font-bold mt-2 ml-2">Important FAQ</h1>
-<img class="m-0 my-1 h-16 w-20" src="./assets/chat.png" alt="">
+<img class="m-0 my-1 h-16 w-20" src="assets/1000_F_118423538_IKUwge088gMxB9BtWmAEfS4Z4K0pTE6c.jpg" alt="">
 </div>
 
 <div class="border p-3 rounded-lg">
@@ -79,7 +90,12 @@ font-family: "Lexend", system-ui;
 
 </div>
 </div>
-<script src="js/home.js"></script>
+<script>
+    document.getElementById('homes').onclick = function(){
+        window.location.href = "index.html";
+    }
+</script>
+<script src="js/index.js"></script>
 
 </header>
 </body>
