added a responsive nav bar

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <img src="assets/logo.png" alt="">
           </div>
           <div>
-            <h1>Donate Bangladesh</h1>
+            <h1 class="ml-2 font-bold text-2xl hidden md:flex">Donate Bangladesh</h1>
           </div>
         </div>
 
